2013-06-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.1 => 1.3.2dev.

2013-06-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (*_la_LDFLAGS): Add -bindir for MinGW DLL.

2013-04-05  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.1 to prepare for TL'13 pretest.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c: Use kpse_readable_file() with non-const arg.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c: Define ptexenc_version_string as PTEXENCVERSION.

2012-08-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc/ptexenc.h: Correct set_enc_string() return type.

	Updates from W32TeX.
	* ptexenc.c (input_line2): Handle input files with Dos/Windows
	(CRLF) line endings.
	Various sjisterminal related changes.
	* unicode-jp.c: Update variation[] table.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.0 => 1.3.1dev.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* ptexenc.c (write_hex): Cast buffer to 'char *'.

2012-02-29  Ken Brown  <kbrow1i@gmail.com>

	* Makefile.am (libptexenc_la_LIBADD): Add $(KPATHSEA_LIBS) as
	required with `-no-undefined' (at least for Cygwin).

2012-01-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc/ptexenc.h, ptexenc.c: add set_prior_file_enc() in order to
	enable -kanji option in pdvitype and updvitype.
	(patch from TANAKA Takuji-san).

2011-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c, ptexenc/ptexenc.h: Declare and export Poptr.

2011-09-05  Takuji Tanaka <KXD02663@nifty.ne.jp>

	* ptexenc.c: Fix putc2() to output right unicode characters.

2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* unicode.c (UTF8length, UCStoUPTEX, UPTEXtoUCS),
	* unicode-jp.c (variation, JIStoUCS2): Patches from