@@ -1,3 +1,8 @@
+2013-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* ptexenc.c: Remove redundant lines in input_line2(), which are
+	inconsistent with those lines in texmfmp.c.
+
 2013-06-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* version.ac: Update version number 1.3.1 => 1.3.2dev.
